<resources>
    <string name="app_name">RoomDataBase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_pro">Create Profile</string>
    <string name="open_camera">Take a Photo</string>
    <string name="open_gallery">Photo From Gallery</string>
    <string name="choose_option">Photos</string>
    <string name="search">search</string>
    <string name="Update_pro">Update Profile</string>
    <string name="proffestion">App Developer</string>
    <string name="by">By The Order Of The</string>
    <string name="na">ANUJ</string>
    <string name="sur">RAI</string>
</resources>