<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/transperentbg">
<LinearLayout
    android:id="@+id/mybottomsheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/botton_shape_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/choose_option"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/btnopencam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/allerta"
        android:gravity="center"
        android:text="@string/open_camera"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/btnopengal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/allerta"
        android:text="@string/open_gallery"
        android:textSize="20sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp" />
</LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>