<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1f1f1d"
    android:orientation="vertical"
    tools:context=".userenterface">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/wt"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/whiteline" />

        <View
            android:id="@+id/blue"
            android:layout_width="20dp"
            android:layout_height="100dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/wt"
            android:background="@drawable/blueline" />

        <View
            android:id="@+id/red"
            android:layout_width="20dp"
            android:layout_height="200dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/blue"
            android:background="@drawable/redline" />

        <View
            android:id="@+id/des"
            android:layout_width="20dp"
            android:layout_height="250dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/red"
            android:background="@drawable/designline" />

        <View
            android:id="@+id/red2"
            android:layout_width="20dp"
            android:layout_height="150dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/des"
            android:background="@drawable/redline" />

        <View
            android:id="@+id/blue2"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@+id/red2"
            android:background="@drawable/blueline" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/romanesco"
            android:text="@string/by"
            android:textColor="#ede0da"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt1"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/na"
            android:textColor="#ede0da"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt2"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/black_ops_one"
            android:text="@string/sur"
            android:textColor="#ede0da"
            android:textSize="80sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/txt4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="25dp"
                android:fontFamily="@font/average_sans"
                android:text="@string/proffestion"
                android:textColor="#a1819d"
                android:textStyle="bold"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
</layout>